--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "tools",
     "helpers"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vinogradov/domtooljs.git"
+  },
   "description": "Some helpful DOM tools",
   "devDependencies": {
     "@babel/core": "7.2.2",
